# tictactoe

./: .gitignore  CMakeLists.txt  README.md
src/: connClass.cpp  connScreen.cpp  tictactoe.cpp  tictactoe.hpp  tttgame.cpp
